--- a/index.html
+++ b/index.html
@@ -49,27 +49,14 @@
   <div class="container">
     <form class="form-signin">
       <h1 class="h4 mb-3 font-weight-normal text-center">กรุณาลงชื่อเข้าใช้</h1>
-<!-- 
-      <div class="input-group">
-        <span class="input-group-append">
-          <div class="input-group-text bg-transparent"><i class="fas fa-user"></i></div>
-        </span>
-        <label for="inputUserId" class="sr-only">ชื่อผู้ใช้งาน</label>
-        <input type="text" id="inputUserId" class="form-control" placeholder="ชื่อผู้ใช้งาน" required autofocus />
-      </div> -->
 
-
-
-
-
-       <!-- <i class="fas fa-user"></i> -->
       <label for="inputUserId" class="sr-only">ชื่อผู้ใช้งาน</label>
-      <input type="text" id="inputUserId" class="form-control" placeholder="ชื่อผู้ใช้งาน" required autofocus /> 
+      <input type="text" id="inputUserId" class="form-control" placeholder="ชื่อผู้ใช้งาน" required autofocus />
 
-      <!-- <i class="fas fa-key"></i> -->
       <label for="inputPassword" class="sr-only">รหัสผ่าน</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="รหัสผ่าน" required />
-      <button class="btn btn-lg btn-primary btn-block" id="btnSubmit" type="submit">
+
+      <button class="btn btn-lg btn-primary btn-block mt-3" id="btnSubmit" type="submit">
         เข้าสู่ระบบ
       </button>
     </form>
