--- a/pages/index.html
+++ b/pages/index.html
@@ -8,18 +8,19 @@
   <meta name="author" content="" />
 
   <title>Sign in · SUMO Web</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/businessman.png">
+  <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
+  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="css/signin.css" rel="stylesheet" />
+  <link href="../css/signin.css" rel="stylesheet" />
 
   <style>
     .bd-placeholder-img {
@@ -42,7 +43,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container-fluid">
-      <img src="img/ic_sumo.png" class="img-fluid" style="max-width:90px;">
+      <img src="../img/ic_sumo.png" class="img-fluid" style="max-width:90px;">
     </div>
   </nav>
 
@@ -56,9 +57,10 @@
       <label for="inputPassword" class="sr-only">รหัสผ่าน</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="รหัสผ่าน" required />
 
-      <button class="btn btn-lg btn-primary btn-block mt-3" id="btnSubmit" type="submit">
+      <button class="btn btn-lg btn-primary btn-block mt-3" id="btnSubmit" type="submit" onclick="window.open('search.html')" >
         เข้าสู่ระบบ
       </button>
+      <!-- <a class="btn btn-lg btn-primary btn-block mt-3" href="#" role="button">เข้าสู่ระบบ</a> -->
     </form>
   </div>
 
