Add href to search page

--- a/pages/index.html
+++ b/pages/index.html
@@ -57,7 +57,7 @@
       <label for="inputPassword" class="sr-only">รหัสผ่าน</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="รหัสผ่าน" required />
 
-      <button class="btn btn-lg btn-primary btn-block mt-3" id="btnSubmit" type="submit" onclick="window.open('search.html')" >
+<button class="btn btn-lg btn-primary btn-block mt-3" id="btnSubmit" type="submit" onclick="location.href = 'search.html';">
         เข้าสู่ระบบ
       </button>
       <!-- <a class="btn btn-lg btn-primary btn-block mt-3" href="#" role="button">เข้าสู่ระบบ</a> -->
