Add color effect to Logout button

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container-fluid">
-      <img src="../img/ic_sumo.png" class="img-fluid" style="max-width:90px;">
+      <img src="../img/ic_sumo.png" class="img-fluid" style="max-width:120px;">
     </div>
   </nav>
 
@@ -66,7 +66,7 @@
 
   <footer class="py-3 fixed-bottom">
     <div class="container-fluid">
-      <p class="m-0 float-right text-white small">SUMO Call Center 02-119-0011</p>
+      <p class="m-0 float-right text-white">SUMO Call Center 02-119-0011</p>
     </div>
   </footer>
 </body>
