--- a/pages/search.html
+++ b/pages/search.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom styles for this template-->
     <link href="../css/search.css" rel="stylesheet">
@@ -40,18 +40,24 @@
         .show>.btn-primary.dropdown-toggle:focus {
             box-shadow: 0 0 0 .2rem rgba(251, 66, 126, 0.5)
         }
+        div {
+            border-style: solid;
+            border-width: 0.1px;
+            border-color: black;
+        }
     </style>
 </head>
 
-<body class="bg-color">
-    <nav class="navbar shadow-sm nav-color">
+<body>
+    <nav class="navbar">
         <div class="container-fluid mb-5">
             <div class="col-md-5 col-6">
-                <img src="../img/ic_sumo.png" class="img-fluid" style="max-width:120px;">
+                <img src="../img/ic_sumo.png" class="img-fluid">
             </div>
 
             <div class="col-md-7 col-6">
-                <a class="btn btn-large btn-primary float-right" href="index.html"><i class="fa fa-sign-out"></i> ออกจากระบบ</a>
+                <a class="btn btn-large btn-primary float-right" href="index.html"><i class="fa fa-sign-out"></i>
+                    ออกจากระบบ</a>
             </div>
         </div>
 
@@ -92,7 +98,7 @@
             </div>
         </div> -->
 
-        <div class="card shadow-sm mt-5">
+        <div class="card shadow-sm mt-5 mb-5">
             <div class="card-header nav-color">
                 <h4>ข้อมูลลูกค้า</h4>
             </div>
@@ -130,7 +136,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <button class="btn color-primary btn-download fix-right" type="button" style="width:22%;">
+                                        <button class="btn color-primary btn-download fix-right" type="button">
                                             <i class="fa fa-file-pdf-o mr-2"></i></span>
                                             ดาวน์โหลดเอกสาร
                                         </button>
@@ -138,7 +144,7 @@
                                 </tr>
                                 <!-- <tr>
                                     <td>
-                                        <button class="btn btn-info fix-right" type="button" disabled style="width:22%;">
+                                        <button class="btn btn-info fix-right" type="button" disabled>
                                             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                                             กำลังดำเนินการ...
                                         </button>
@@ -151,7 +157,13 @@
             </div>
         </div>
     </div>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <footer class="py-3">
+        <div class="container-fluid">
+            <p class="m-0 float-right text-white">SUMO Call Center 02-119-0011</p>
+        </div>
+    </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
 
