Add logo max width on navbar

--- a/pages/search.html
+++ b/pages/search.html
@@ -52,7 +52,7 @@
     <nav class="navbar">
         <div class="container-fluid mb-5">
             <div class="col-md-5 col-6">
-                <img src="../img/ic_sumo.png" class="img-fluid">
+                <img src="../img/ic_sumo.png" class="img-fluid" style="max-width:120px;">
             </div>
 
             <div class="col-md-7 col-6">
