Refine ui search page and set 0.0 px

--- a/pages/search.html
+++ b/pages/search.html
@@ -42,14 +42,14 @@
         }
         div {
             border-style: solid;
-            border-width: 0.1px;
+            border-width: 0.0px;
             border-color: black;
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar bg-white shadow-sm">
         <div class="container-fluid mb-5">
             <div class="col-md-5 col-6">
                 <img src="../img/ic_sumo.png" class="img-fluid" style="max-width:120px;">
